[package]
name = "fblog"
version = "4.5.0"
authors = ["Patrick Haun <bomgar85@googlemail.com>"]
license = "WTFPL"
categories = ["command-line-utilities"]
description = "json log viewer"
keywords = ["json", "log", "viewer"]
repository = "https://github.com/brocode/fblog"
readme = "README.md"
edition = "2021"

[dependencies]
serde_json = "1.0"
yansi = "0.5.1"
regex = "1"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
lazy_static = "1.4.0"
handlebars = "4"
clap_complete = "4.4.4"

[dependencies.clap]
version = "4"
features = ["cargo", "deprecated"]
