[package]
name = "fblog"
version = "4.10.0"
authors = ["Patrick Haun <bomgar85@googlemail.com>"]
license = "WTFPL"
categories = ["command-line-utilities"]
description = "json log viewer"
keywords = ["json", "log", "viewer"]
repository = "https://github.com/brocode/fblog"
readme = "README.md"
edition = "2021"

[dependencies]
serde_json = "1.0"
regex = "1"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
lazy_static = "1.5.0"
handlebars = "5"
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
chrono = "0.4.38"

[dependencies.clap]
version = "4"
features = ["cargo", "deprecated"]

[dependencies.yansi]
version = "1"
features = ["detect-env"]
