[package]
name = "fblog"
version = "4.17.0"
authors = ["Patrick Haun <bomgar85@googlemail.com>"]
license = "WTFPL"
categories = ["command-line-utilities"]
description = "json log viewer"
keywords = ["json", "log", "viewer"]
repository = "https://github.com/brocode/fblog"
readme = "README.md"
edition = "2024"

[dependencies]
serde_json = "1.0"
regex = "1"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
lazy_static = "1.5.0"
handlebars = "6"
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
chrono = "0.4.43"
indexmap = "2.13.0"

[dependencies.clap]
version = "4"
features = ["cargo", "deprecated"]

[dependencies.yansi]
version = "1"
features = ["detect-env"]
